--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://effiechenn.github.io/coffee-shop",
+  "homepage": "https://effiechenn.github.io/coffee-shop/public/",
   "name": "coffee-shop",
   "version": "0.1.0",
   "private": true,
@@ -11,9 +11,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
-    "web-vitals": "^2.1.4",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -42,9 +40,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "babel-loader": "^8.2.4",
     "gh-pages": "^3.2.3"
   }
 }
