--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://effiechenn.github.io/coffee-shop/public/",
+  "homepage": "https://github.com/coffee-shop/",
   "name": "coffee-shop",
   "version": "0.1.0",
   "private": true,
